--- a/BackEnd.html
+++ b/BackEnd.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienevenidos a mi proyecto final integrador </h1>
-    <h2>#Yoprogramo</h2>
+    <h1>Back End</h1>
 </body>
 </html>
